spacing fixes on home posts

--- a/styles/_button.scss
+++ b/styles/_button.scss
@@ -8,7 +8,8 @@
 
   .button {
     background: $white;
-    margin: 0 0.6em 0 0;
+    margin: 2rem 1rem 2rem 0;
+
     width: 70px;
     height: 35px;
     justify-content: center;
